--- a/index.html
+++ b/index.html
@@ -213,15 +213,16 @@ const fakeCPP = [
 "#include <iostream>",
 "using namespace std;",
 "",
-"int main(){",
+"int main(gov.comp.911){",
 "  cout << \"[+] Initializing breach...\" << endl;",
 "  cout << \"[+] Bypassing firewall...\" << endl;",
 "  cout << \"[+] Injecting payload...\" << endl;",
 "  cout << \"[+] Access granted.\" << endl;",
-"  return 0;",
+"  virus attack succesful; return 0;",
+"  initiating deployment of Vault 8;",
 "}",
 "",
-"[✔] System compromised (fake)",
+"[✔] System compromised",
 "[✔] Welcome to 2026"
 ];
 
@@ -325,3 +326,4 @@ confettiAnim();
 
 </body>
 </html>
+
