--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@ html {
     scroll-behavior: smooth;
 }
 
+.signature {
+  position: fixed;
+  bottom: 10px;
+  right: 15px;
+  font-family: Comic Sans MS, cursive;
+  font-size: 14px;
+  color: white; /* change to black if background is light */
+  opacity: 0.8;
+}
+
 body {
     margin: 0;
     background: radial-gradient(circle, #001111, #000);
@@ -99,7 +109,7 @@ pre {
 </head>
 
 <body>
-
+<div class="signature">— By Vedansh Jain</div>
 <div id="terminal"></div>
 <canvas id="fireworks"></canvas>
 <canvas id="confetti"></canvas>
@@ -326,4 +336,5 @@ confettiAnim();
 
 </body>
 </html>
+
 
